--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-# social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
-
-show_excerpts: true # set to false to remove excerpts on the homepage
-show_downloads: true
-show_header: true
+show_downloads: false
+show_header: false
 remote_theme: "dracula/gh-pages"
 
 sass:
