--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ show_downloads: false
 show_header: false
 remote_theme: "dracula/gh-pages"
 
-sass:
-    style: compressed
+# sass:
+#     style: compressed
 
 plugins:
   - jekyll-seo-tag
