--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
 
 show_downloads: true
 show_header: false
-remote_theme: "dracula/gh-pages"
+remote_theme: "abhinavs/moonwalk"
 
 # sass:
 #     style: compressed
