--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,36 @@
 title: My Test Blog
-author: GitHub User
-description: > # this means to ignore newlines until "baseurl:"
+url: https://maxwellclemens.github.io/github-pages-with-jekyll/ # root address of the site
+description: >
   trying to see if this will work for blogging... 🤞
 
-show_downloads: true
-show_header: false
 remote_theme: "abhinavs/moonwalk"
 
-# sass:
-#     style: compressed
+theme_config:
+  appearance: "dark" # can be "light", "dark" or "auto"
+  appearance_toggle: true # if appearance can be switched by user
+  back_home_text: "home.." # customize text for homepage link in post layout
+  date_format: "%Y-%m-%d" # customize how date is formatted
+  show_description: true # show blog description
+  show_navbar: true # show horizontal navbar
+  show_footer: true # show footer links in home page,add in _data/home.yml
+  show_copyright: true # show copyright notice in footer
+  # following keys are using to create home layout
+  show_projects: true # show projects as cards, add in _data/home.yml
+  show_blog: true # show blog posts added in _posts
+  show_old_projects: false # show old projects as cards, add in _data/home.yml
+  show_misc_list: false # show generic vertical list for misc details, add _data/home.yml
+  # options for "home" page
+  home:
+    title_projects: Projects
+    title_misc_list: Details
+    title_blog: Blog
+    #title_old_projects: Old Projects
+
+highlighter: rouge
+
+sass:
+  style: :compressed
 
 plugins:
-  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-soopr-seo-tag
