try favicon.ico

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
 
 remote_theme: "abhinavs/moonwalk"
 
-favicon: "./monkey.png" # relative path to site's favicon
+favicon: "./favicon.ico" # relative path to site's favicon
 
 theme_config:
   appearance: "dark" # can be "light", "dark" or "auto"
